update 기능 url 문제 발생

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -68,7 +68,7 @@
               class="btn btn-primary"
               type="submit"
               role="button"
-              value="글쓰기"
+              value="수정 하기"
             />
           </div>
         </div>
