update 기능 오류 해결

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -20,7 +20,7 @@
       </div>
     </header>
     <div class="container">
-      <form action="post/edit/{{board.id}}" method="post">
+      <form action="" method="post">
         {% csrf_token %}
         <div class="form-group row">
           <label for="inputTitle" class="col-sm-2 col-form-label"
