--- a/templates/post.html
+++ b/templates/post.html
@@ -20,7 +20,7 @@
       </div>
     </header>
     <div class="container">
-      <form action="/post" method="post">
+      <form action="/post" method="post" enctype='multipart/form-data'>
         {% csrf_token %}
         <div class="form-group row">
           <label for="inputTitle" class="col-sm-2 col-form-label"
@@ -48,6 +48,7 @@
             />
           </div>
         </div>
+
         <div class="form-group row">
           <label for="inputContent" class="col-sm-2 col-form-label"
             ><strong>내용</strong></label
@@ -61,8 +62,15 @@
             ></textarea>
           </div>
         </div>
+        <div class="form-group row">
+          <label for="inputImage" class="col-sm-2 col-form-label"
+            ><strong>업로드</strong></label
+          >
+          <input name="image" type="file">
+          </div>
+        </div>
         <div class="row">
-          <div class="col-auto mr-auto"></div>
+          <div class="col-10 mr-1"></div>
           <div class="col-auto">
             <input
               class="btn btn-primary"
