화면 꾸미기 기본 세팅

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,7 +3,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>게시판 - edit.html</title>
+    <title>지능형 CCTV</title>
     <link
       rel="stylesheet"
       href="{% static 'bootstrap/css/bootstrap.min.css' %}"
@@ -14,7 +14,7 @@
       <div class="navbar navbar-dark bg-dark shadow-sm mb-3">
         <div class="container d-flex justify-content-between">
           <a href="/" class="navbar-brand d-flex align-items-center">
-            <strong>게시판</strong>
+            <strong>CCTV updeate</strong>
           </a>
         </div>
       </div>
