--- a/templates/detail.html
+++ b/templates/detail.html
@@ -3,7 +3,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>게시판 - detail.html{{ board.title }}</title>
+    <title>{{ board.title }}</title>
     <link
       rel="stylesheet"
       href="{% static 'bootstrap/css/bootstrap.min.css' %}"
@@ -14,7 +14,7 @@
       <div class="navbar navbar-dark bg-dark shadow-sm mb-3">
         <div class="container d-flex justify-content-between">
           <a href="/" class="navbar-brand d-flex align-items-center">
-            <strong>게시판</strong>
+            <strong>CCTV</strong>
           </a>
         </div>
       </div>
@@ -22,8 +22,10 @@
     <div class="container">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">{{ board.title }} - {{ board.author }}</h5>
+          <h2 class="card-title">{{ board.title }}</h2>
           <p class="card-text">
+            <small class="text-muted">작성자 : {{ board.author }}</small>
+            <br />
             <small class="text-muted"
               >{{ board.created_date | date:"Y-m-d h:i" }}</small
             >
