--- a/templates/list.html
+++ b/templates/list.html
@@ -3,27 +3,26 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>게시판 - list.html</title>
+    <title>지능형 CCTV</title>
     <link
       rel="stylesheet"
       href="{% static 'bootstrap/css/bootstrap.min.css' %}"
     />
+    <link rel="stylesheet" href="{%static 'jsCss/list.css'%}" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <header>
-      <div class="navbar navbar-dark bg-dark shadow-sm mb-3">
-        <div class="container d-flex justify-content-between">
-          <a href="/" class="navbar-brand d-flex align-items-center">
-            <strong>게시판</strong>
-          </a>
-        </div>
-      </div>
-    </header>
     <div class="container">
       <table class="table">
         <thead class="thead-light">
           <tr class="text-center">
-            <th scope="col">#</th>
+            <th scope="col"><i class="fa-solid fa-video"></i></th>
             <th scope="col">제목</th>
             <th scope="col">작성자</th>
             <th scope="col">작성일</th>
@@ -53,10 +52,18 @@
       <div class="row">
         <div class="col-auto mr-auto"></div>
         <div class="col-auto">
-          <a class="btn btn-primary" href="/post" role="button">글쓰기</a>
+          <a class="btn btn-primary" href="/post" role="button"
+            >영상 등록하기</a
+          >
         </div>
       </div>
     </div>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"
+      integrity="sha512-6PM0qYu5KExuNcKt5bURAoT6KCThUmHRewN3zUFNaoI6Di7XJPTMoT6K0nsagZKk2OB4L7E3q1uQKHNHd4stIQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
   </body>
 </html>
