--- a/templates/post.html
+++ b/templates/post.html
@@ -3,10 +3,18 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>게시판 - post.html</title>
+    <title>지능형 CCTV</title>
     <link
       rel="stylesheet"
       href="{% static 'bootstrap/css/bootstrap.min.css' %}"
+    />
+    <link rel="stylesheet" href="{%static 'jsCss/navbar.css'%}" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
   </head>
   <body>
@@ -14,11 +22,11 @@
       <div class="navbar navbar-dark bg-dark shadow-sm mb-3">
         <div class="container d-flex justify-content-between">
           <a href="/" class="navbar-brand d-flex align-items-center">
-            <strong>게시판</strong>
+            <strong>CCTV upload</strong>
           </a>
         </div>
       </div>
-    </header>
+    </header>    
     <div class="container">
       <form action="/post" method="post" enctype='multipart/form-data'>
         {% csrf_token %}
@@ -76,12 +84,15 @@
               class="btn btn-primary"
               type="submit"
               role="button"
-              value="글쓰기"
+              value="등록하기"
             />
           </div>
         </div>
       </form>
     </div>
+    <script src="//code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="{% static 'jsCss/navbar.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
   </body>
 </html>
