동영상 업로드 기능 추가, 글 업데이트시 기존 파일 삭제 안되는  버그 출현

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -30,7 +30,12 @@
               >{{ board.created_date | date:"Y-m-d h:i" }}</small
             >
           </p>
-          {% if board.image %}
+          {% if board.fileType == ".mp4" %}
+          <video controls autoplay>
+            <source src="{{board.image.url}}" type="video/mp4" />
+            영상 안돼!
+          </video>
+          {% else %}
           <img src="{{board.image.url}}" />
           <br /><br />
           {% endif %}
