--- a/templates/list.html
+++ b/templates/list.html
@@ -19,6 +19,10 @@
   </head>
   <body>
     <div class="container">
+      <video controls autoplay>
+        <source src="/media/video/testVideo.mp4" type="video/mp4" />
+        영상 안돼!
+      </video>
       <table class="table">
         <thead class="thead-light">
           <tr class="text-center">
