--- a/templates/list.html
+++ b/templates/list.html
@@ -18,47 +18,149 @@
     />
   </head>
   <body>
-    <div class="container">
-      <video controls autoplay>
-        <source src="/media/video/testVideo.mp4" type="video/mp4" />
-        영상 안돼!
-      </video>
-      <table class="table">
-        <thead class="thead-light">
-          <tr class="text-center">
-            <th scope="col"><i class="fa-solid fa-video"></i></th>
-            <th scope="col">제목</th>
-            <th scope="col">작성자</th>
-            <th scope="col">작성일</th>
-          </tr>
-        </thead>
-        <tbody>
+    <div class="app-container">
+      <div class="sidebar">
+        <div class="sidebar-header">
+          <div class="app-icon">
+            <span class="iconify" data-icon="bxs:cctv" data-width="24" data-height="24"></span>
+          </div>
+        </div>
+        <ul class="sidebar-list">
+          <li class="sidebar-list-item">
+            <a href="/">
+              <span class="iconify" data-icon="ant-design:home-outlined" data-width="24" data-height="24"></span>
+              <span>Home</span>
+            </a>
+          </li>
+          <li class="sidebar-list-item active">
+            <a href="#">
+              <span class="iconify" data-icon="line-md:image-twotone" data-width="24" data-height="24"></span>
+              <span>Products</span>
+            </a>
+          </li>
+          <li class="sidebar-list-item">
+            <a href="#">
+              <span class="iconify" data-icon="line-md:image-twotone" data-width="24" data-height="24"></span>
+              <span>Statistics</span>
+            </a>
+          </li>
+          <li class="sidebar-list-item">
+            <a href="#">
+              <span class="iconify" data-icon="line-md:image-twotone" data-width="24" data-height="24"></span>
+              <span>Inbox</span>
+            </a>
+          </li>
+          <li class="sidebar-list-item">
+            <a href="#">
+              <span class="iconify" data-icon="line-md:image-twotone" data-width="24" data-height="24"></span>
+              <span>Notifications</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="app-content">
+        <div class="app-content-header">
+          <h1 class="app-content-headerText">CCTV List</h1>
+          <button class="mode-switch" title="Switch Theme">
+            <span class="iconify" data-icon="eva:moon-fill" data-width="24" data-height="24"></span>
+          </button>
+          <button class="app-content-headerButton" onclick="window.location.href='/post'">Add Image</button>
+        </div>
+        <div class="app-content-actions">
+          <input class="search-bar" placeholder="Search..." type="text">
+          <div class="app-content-actions-wrapper">
+            <div class="filter-button-wrapper">
+              <button class="action-button filter jsFilter"><span>Filter</span><span class="iconify" data-icon="line-md:image-twotone" data-width="24" data-height="24"></span></button>
+              <div class="filter-menu">
+                <label>Category</label>
+                <select>
+                  <option>All Categories</option>
+                  <option>Furniture</option>                     
+                  <option>Decoration</option>
+                  <option>Kitchen</option>
+                  <option>Bathroom</option>
+                </select>
+                <label>Status</label>
+                <select>
+                  <option>All Status</option>
+                  <option>Active</option>
+                  <option>Disabled</option>
+                </select>
+                <div class="filter-menu-buttons">
+                  <button class="filter-button reset">
+                    Reset
+                  </button>
+                  <button class="filter-button apply">
+                    Apply
+                  </button>
+                </div>
+              </div>
+            </div>
+            <button class="action-button list active" title="List View">
+              <span class="iconify" data-icon="bi:list-ol" data-width="24" data-height="24"></span>
+            </button>
+            <button class="action-button grid" title="Grid View">
+              <span class="iconify" data-icon="bi:grid-3x3" data-width="24" data-height="24"></span>
+            </button>
+          </div>
+        </div>
+        <div class="products-area-wrapper tableView">
+          <div class="products-header">
+            <div class="product-cell image">
+              CCTV
+              <button class="sort-button">
+                <span class="iconify" data-icon="bx:sort-alt-2" data-width="24" data-height="24"></span>
+              </button>
+            </div>
+            <div class="product-cell author">작성자<button class="sort-button">
+                <span class="iconify" data-icon="bx:sort-alt-2" data-width="24" data-height="24"></span>
+              </button></div>
+            <div class="product-cell status-cell">상태<button class="sort-button">
+                <span class="iconify" data-icon="bx:sort-alt-2" data-width="24" data-height="24"></span>
+              </button></div>
+            <div class="product-cell content">내용<button class="sort-button">
+                <span class="iconify" data-icon="bx:sort-alt-2" data-width="24" data-height="24"></span>
+              </button></div>
+            <div class="product-cell created_date">작성날짜<button class="sort-button">
+                <span class="iconify" data-icon="bx:sort-alt-2" data-width="24" data-height="24"></span>
+              </button></div>
+            <div class="product-cell modified_date">수정날짜<button class="sort-button">
+                <span class="iconify" data-icon="bx:sort-alt-2" data-width="24" data-height="24"></span>
+              </button></div>
+          </div>
           {% for board in boards %}
-          <tr class="text-center">
-            <th scope="row">
-              <span>{{ board.id }}</span>
-            </th>
-            <td>
-              <a href="/post/{{ board.id }}">
-                <span>{{ board.title }}</span>
-              </a>
-            </td>
-            <td>
-              <span>{{ board.author }}</span>
-            </td>
-            <td>
-              <span>{{ board.created_date | date:"Y-m-d h:i" }}</span>
-            </td>
-          </tr>
+          <div class="products-row">
+            <button class="cell-more-button">
+              <span class="iconify" data-icon="feather:more-vertical" data-width="18" data-height="18"></span>
+            </button>
+              <div class="product-cell image">
+                {% if board.fileType == ".mp4" %}
+                <img src="media/images/thumbnail.png" />
+                {% else %}
+                <img src="{{board.image.url}}" />
+                {% endif %}
+                <a href="/post/{{ board.id }}">
+                  <span>{{ board.title }}</span>
+                </a>
+              </div>
+            <div class="product-cell author"><span class="cell-label">작성자</span>{{ board.author }}</div>
+            <div class="product-cell status-cell">
+              <span class="cell-label">상태:</span>
+              {% if board.status == 1 %}
+              <span class="status normal">정상</span>
+              {% elif board.status == 2 %}
+              <span class="status warn">경고</span>
+              {% elif board.status == 3 %}
+              <span class="status danger">위험</span>
+              {% else %}
+              <span class="status disabled">NULL</span>
+              {% endif %}
+            </div>
+            <div class="product-cell content"><span class="cell-label">내용:</span>{{ board.content }}</div>
+            <div class="product-cell created_date"><span class="cell-label">작성 날짜:</span>{{ board.created_date | date:"Y-m-d h:i" }}</div>
+            <div class="product-cell modified_date"><span class="cell-label">수정 날짜:</span>{{ board.modified_date | date:"Y-m-d h:i" }}</div>
+          </div>
           {% endfor %}
-        </tbody>
-      </table>
-      <div class="row">
-        <div class="col-auto mr-auto"></div>
-        <div class="col-auto">
-          <a class="btn btn-primary" href="/post" role="button"
-            >영상 등록하기</a
-          >
         </div>
       </div>
     </div>
@@ -69,5 +171,8 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
-  </body>
+    <script src="{% static 'jsCss/list.js' %}"></script>
+    <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
+  <body/>
+
 </html>
