--- a/templates/list.html
+++ b/templates/list.html
@@ -26,34 +26,34 @@
           </div>
         </div>
         <ul class="sidebar-list">
-          <li class="sidebar-list-item">
+          <li class="sidebar-list-item active">
             <a href="/">
               <span class="iconify" data-icon="ant-design:home-outlined" data-width="24" data-height="24"></span>
               <span>Home</span>
             </a>
           </li>
-          <li class="sidebar-list-item active">
+          <li class="sidebar-list-item">
             <a href="#">
-              <span class="iconify" data-icon="line-md:image-twotone" data-width="24" data-height="24"></span>
-              <span>Products</span>
+              <span class="iconify" data-icon="ph:traffic-signal-light" style="color: red;" data-width="24" data-height="24"></span>
+              <span>Danger</span>
             </a>
           </li>
           <li class="sidebar-list-item">
             <a href="#">
-              <span class="iconify" data-icon="line-md:image-twotone" data-width="24" data-height="24"></span>
-              <span>Statistics</span>
+              <span class="iconify" data-icon="ph:traffic-signal-light" style="color: orange;" data-width="24" data-height="24"></span>
+              <span>Warn</span>
             </a>
           </li>
           <li class="sidebar-list-item">
             <a href="#">
-              <span class="iconify" data-icon="line-md:image-twotone" data-width="24" data-height="24"></span>
-              <span>Inbox</span>
+              <span class="iconify" data-icon="ph:traffic-signal-light" style="color: green;" data-width="24" data-height="24"></span>
+              <span>Normal</span>
             </a>
           </li>
           <li class="sidebar-list-item">
             <a href="#">
-              <span class="iconify" data-icon="line-md:image-twotone" data-width="24" data-height="24"></span>
-              <span>Notifications</span>
+              <span class="iconify" data-icon="ph:traffic-signal-light" data-width="24" data-height="24"></span>
+              <span>None Specify</span>
             </a>
           </li>
         </ul>
@@ -171,7 +171,6 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'jsCss/list.js' %}"></script>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   <body/>
 
