--- a/templates/list.html
+++ b/templates/list.html
@@ -172,6 +172,7 @@
     ></script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
+    <script src="{% static 'jsCss/list.js'%}"></script>
   <body/>
 
 </html>
