--- a/static/jsCss/list.css
+++ b/static/jsCss/list.css
@@ -392,14 +392,14 @@ body {
   background-color: var(--filter-reset);
 }
 
-.products-area-wrapper {
+.cctv-area-wrapper {
   width: 100%;
   max-height: 100%;
   overflow: auto;
   padding: 0 4px;
 }
 
-.tableView .products-header {
+.tableView .cctv-header {
   display: flex;
   align-items: center;
   border-radius: 4px;
@@ -407,19 +407,19 @@ body {
   position: sticky;
   top: 0;
 }
-.tableView .products-row {
+.tableView .cctv-row {
   display: flex;
   align-items: center;
   border-radius: 4px;
 }
-.tableView .products-row:hover {
+.tableView .cctv-row:hover {
   box-shadow: var(--filter-shadow);
   background-color: var(--app-content-secondary-color);
 }
-.tableView .products-row .cell-more-button {
+.tableView .cctv-row .cell-more-button {
   display: none;
 }
-.tableView .product-cell {
+.tableView .cctv-cell {
   flex: 1;
   padding: 8px 16px;
   color: var(--app-content-main-color);
@@ -427,41 +427,41 @@ body {
   display: flex;
   align-items: center;
 }
-.tableView .product-cell img {
+.tableView .cctv-cell img {
   width: 32px;
   height: 32px;
   border-radius: 6px;
   margin-right: 6px;
 }
 @media screen and (max-width: 780px) {
-  .tableView .product-cell {
+  .tableView .cctv-cell {
     font-size: 12px;
   }
-  .tableView .product-cell.image span {
+  .tableView .cctv-cell.image span {
     display: none;
   }
-  .tableView .product-cell.image {
+  .tableView .cctv-cell.image {
     flex: 0.2;
   }
 }
 @media screen and (max-width: 520px) {
-  .tableView .product-cell.author,
-  .tableView .product-cell.content {
+  .tableView .cctv-cell.author,
+  .tableView .cctv-cell.content {
     display: none;
   }
-  .tableView .product-cell.status-cell {
+  .tableView .cctv-cell.status-cell {
     flex: 0.4;
   }
-  .tableView .product-cell.created_date,
-  .tableView .product-cell.modified_date {
+  .tableView .cctv-cell.created_date,
+  .tableView .cctv-cell.modified_date {
     flex: 0.2;
   }
 }
 @media screen and (max-width: 480px) {
-  .tableView .product-cell.created_date {
+  .tableView .cctv-cell.created_date {
     display: none;
   }
-  .tableView .product-cell.modified_date {
+  .tableView .cctv-cell.modified_date {
     flex: 0.4;
   }
 }
@@ -537,10 +537,10 @@ body {
     margin: 0;
   }
 }
-.gridView .products-header {
+.gridView .cctv-header {
   display: none;
 }
-.gridView .products-row {
+.gridView .cctv-row {
   margin: 8px;
   width: calc(25% - 16px);
   background-color: var(--app-content-secondary-color);
@@ -550,33 +550,33 @@ body {
   transition: transform 0.2s;
   position: relative;
 }
-.gridView .products-row:hover {
+.gridView .cctv-row:hover {
   transform: scale(1.01);
   box-shadow: var(--filter-shadow);
 }
-.gridView .products-row:hover .cell-more-button {
+.gridView .cctv-row:hover .cell-more-button {
   display: flex;
 }
 @media screen and (max-width: 1024px) {
-  .gridView .products-row {
+  .gridView .cctv-row {
     width: calc(33.3% - 16px);
   }
 }
 @media screen and (max-width: 820px) {
-  .gridView .products-row {
+  .gridView .cctv-row {
     width: calc(50% - 16px);
   }
 }
 @media screen and (max-width: 520px) {
-  .gridView .products-row {
+  .gridView .cctv-row {
     width: 100%;
     margin: 8px 0;
   }
-  .gridView .products-row:hover {
+  .gridView .cctv-row:hover {
     transform: none;
   }
 }
-.gridView .products-row .cell-more-button {
+.gridView .cctv-row .cell-more-button {
   border: none;
   padding: 0;
   border-radius: 4px;
@@ -594,21 +594,21 @@ body {
   cursor: pointer;
   display: none;
 }
-.gridView .product-cell {
+.gridView .cctv-cell {
   color: var(--app-content-main-color);
   font-size: 14px;
   margin-bottom: 8px;
 }
-.gridView .product-cell:not(.image) {
+.gridView .cctv-cell:not(.image) {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.gridView .product-cell.image span {
+.gridView .cctv-cell.image span {
   font-size: 18px;
   line-height: 24px;
 }
-.gridView .product-cell img {
+.gridView .cctv-cell img {
   width: 100%;
   height: 140px;
   object-fit: cover;
