status에 따라서 해당하는 cctv 볼 수 있도록 설정

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -50,17 +50,22 @@
             id="inputContent"
             required=""
           />
-          <label>내용</label>
+          <label>설명</label>
         </div>
         <div class="user-box">
           <input type="file" name="image" required="" />
         </div>
-        <input
-          class="btn btn-primary"
-          type="submit"
-          role="button"
-          value="수정하기"
-        />
+        <div class="button-area">
+          <input
+            class="btn btn-primary"
+            type="submit"
+            role="button"
+            value="수정하기"
+          />
+          <button class="home-button" onclick="window.location.href='/'">
+            돌아가기
+          </button>
+        </div>
       </form>
     </div>
     <script
