--- a/templates/test.html
+++ b/templates/test.html
@@ -33,27 +33,33 @@
             </a>
           </li>
           <li class="sidebar-list-item">
-            <a href="#">
+            <a href="/danger">
               <span class="iconify" data-icon="ph:traffic-signal-light" style="color: red;" data-width="24" data-height="24"></span>
               <span>Danger</span>
             </a>
           </li>
           <li class="sidebar-list-item">
-            <a href="#">
+            <a href="/warn">
               <span class="iconify" data-icon="ph:traffic-signal-light" style="color: orange;" data-width="24" data-height="24"></span>
               <span>Warn</span>
             </a>
           </li>
           <li class="sidebar-list-item">
-            <a href="#">
+            <a href="/normal">
               <span class="iconify" data-icon="ph:traffic-signal-light" style="color: green;" data-width="24" data-height="24"></span>
               <span>Normal</span>
+            </a>
+          </li>
+          <li class="sidebar-list-item">
+            <a href="/null">
+              <span class="iconify" data-icon="ph:traffic-signal-light" style="color: gray;" data-width="24" data-height="24"></span>
+              <span>Null</span>
             </a>
           </li>
           <li class="sidebar-list-item active">
             <a href="/test">
               <span class="iconify" data-icon="ph:traffic-signal-light" data-width="24" data-height="24"></span>
-              <span>None Specify</span>
+              <span>Test Server</span>
             </a>
           </li>
         </ul>
