--- a/static/jsCss/post.css
+++ b/static/jsCss/post.css
@@ -61,3 +61,18 @@ body {
   color: #03e9f4;
   font-size: 12px;
 }
+.home-button {
+  border-radius: 4px;
+  height: 37px;
+  width: 90px;
+  background-color: red;
+  border: 1px solid red;
+  color: #e9ecef;
+  font-size: 15px;
+  cursor: pointer;
+  float: right;
+}
+.home-button:hover {
+  background-color: tomato;
+  border: 1px solid tomato;
+}
